# vesper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  integration.yml  python-lint.yml  python-test.yml  rust-lint.yml  rust-test.yml
docs/: ARCHITECTURE.md  VESPER_SPEC.md
examples/data_pipeline/: README.md  data_pipeline.vsp
examples/hello_world/: README.md  hello_world.vsp
examples/payment_handler/: README.md  payment_handler.vsp  test_payment.py
python/tests/: __init__.py  test_cli.py  test_compiler.py  test_confidence.py  test_differential.py  test_generator.py  test_models.py  test_runtime.py  test_shadow_mode.py  test_validator.py  test_verification.py
python/tests/fixtures/: calculator.vsp  simple_greeting.vsp  user_validator.vsp
python/vesper/: README.md  __init__.py  compiler.py  generator.py  models.py  runtime.py  validator.py
python/vesper/cli/: __init__.py  main.py
python/vesper/templates/: __init__.py  function.py.jinja2
python/vesper_runtime/: __init__.py  backends.py  contracts.py  executor.py  tracing.py
python/vesper_verification/: __init__.py  confidence.py  differential.py  divergence.py  metrics.py  routing.py  shadow_mode.py
rust/: Cargo.toml
rust/vesper_core/: Cargo.toml
rust/vesper_core/src/: contracts.rs  error.rs  executor.rs  lib.rs  loader.rs  types.rs
rust/vesper_jit/: Cargo.toml
rust/vesper_jit/src/: compiler.rs  hot_path.rs  lib.rs
spec/v0.1/: schema.json
spec/v0.1/examples/: add_numbers.vsp  hello_world.vsp
tests/differential/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
