[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vesper"
version = "0.1.0"
description = "Verified execution bridging traditional code and LLM-native runtimes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Witlox", email = "vesper@witlox.io" }
]
keywords = ["llm", "semantic", "verification", "runtime", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.90.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
vesper = "vesper.cli.main:main"

[project.urls]
Homepage = "https://github.com/witlox/vesper"
Documentation = "https://github.com/witlox/vesper/docs"
Repository = "https://github.com/witlox/vesper"
Issues = "https://github.com/witlox/vesper/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/vesper"]

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
