[workspace]
resolver = "2"
members = [
    "vesper_core",
    "vesper_jit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Witlox"]
repository = "https://github.com/witlox/vesper"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

